link Booking and NurseAvailability